// Code generated by protoc-gen-go. DO NOT EDIT.
// versions:
// 	protoc-gen-go v1.36.11
// 	protoc        v4.25.1
// source: proto/relationship.proto

package proto

import (
	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
	reflect "reflect"
	sync "sync"
	unsafe "unsafe"
)

const (
	// Verify that this generated code is sufficiently up-to-date.
	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
	// Verify that runtime/protoimpl is sufficiently up-to-date.
	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
)

type AddEntityRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	Name          string                 `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
	Type          string                 `protobuf:"bytes,2,opt,name=type,proto3" json:"type,omitempty"` // e.g., "Person", "Place"
	Properties    map[string]string      `protobuf:"bytes,3,rep,name=properties,proto3" json:"properties,omitempty" protobuf_key:"bytes,1,opt,name=key" protobuf_val:"bytes,2,opt,name=value"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *AddEntityRequest) Reset() {
	*x = AddEntityRequest{}
	mi := &file_proto_relationship_proto_msgTypes[0]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *AddEntityRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*AddEntityRequest) ProtoMessage() {}

func (x *AddEntityRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_relationship_proto_msgTypes[0]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use AddEntityRequest.ProtoReflect.Descriptor instead.
func (*AddEntityRequest) Descriptor() ([]byte, []int) {
	return file_proto_relationship_proto_rawDescGZIP(), []int{0}
}

func (x *AddEntityRequest) GetName() string {
	if x != nil {
		return x.Name
	}
	return ""
}

func (x *AddEntityRequest) GetType() string {
	if x != nil {
		return x.Type
	}
	return ""
}

func (x *AddEntityRequest) GetProperties() map[string]string {
	if x != nil {
		return x.Properties
	}
	return nil
}

type AddEntityResponse struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	Id            int32                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
	Message       string                 `protobuf:"bytes,2,opt,name=message,proto3" json:"message,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *AddEntityResponse) Reset() {
	*x = AddEntityResponse{}
	mi := &file_proto_relationship_proto_msgTypes[1]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *AddEntityResponse) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*AddEntityResponse) ProtoMessage() {}

func (x *AddEntityResponse) ProtoReflect() protoreflect.Message {
	mi := &file_proto_relationship_proto_msgTypes[1]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use AddEntityResponse.ProtoReflect.Descriptor instead.
func (*AddEntityResponse) Descriptor() ([]byte, []int) {
	return file_proto_relationship_proto_rawDescGZIP(), []int{1}
}

func (x *AddEntityResponse) GetId() int32 {
	if x != nil {
		return x.Id
	}
	return 0
}

func (x *AddEntityResponse) GetMessage() string {
	if x != nil {
		return x.Message
	}
	return ""
}

type AddRelationshipRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	SourceName    string                 `protobuf:"bytes,1,opt,name=source_name,json=sourceName,proto3" json:"source_name,omitempty"`
	TargetName    string                 `protobuf:"bytes,2,opt,name=target_name,json=targetName,proto3" json:"target_name,omitempty"`
	Type          string                 `protobuf:"bytes,3,opt,name=type,proto3" json:"type,omitempty"` // e.g., "husband_of", "hates"
	Attributes    map[string]string      `protobuf:"bytes,4,rep,name=attributes,proto3" json:"attributes,omitempty" protobuf_key:"bytes,1,opt,name=key" protobuf_val:"bytes,2,opt,name=value"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *AddRelationshipRequest) Reset() {
	*x = AddRelationshipRequest{}
	mi := &file_proto_relationship_proto_msgTypes[2]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *AddRelationshipRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*AddRelationshipRequest) ProtoMessage() {}

func (x *AddRelationshipRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_relationship_proto_msgTypes[2]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use AddRelationshipRequest.ProtoReflect.Descriptor instead.
func (*AddRelationshipRequest) Descriptor() ([]byte, []int) {
	return file_proto_relationship_proto_rawDescGZIP(), []int{2}
}

func (x *AddRelationshipRequest) GetSourceName() string {
	if x != nil {
		return x.SourceName
	}
	return ""
}

func (x *AddRelationshipRequest) GetTargetName() string {
	if x != nil {
		return x.TargetName
	}
	return ""
}

func (x *AddRelationshipRequest) GetType() string {
	if x != nil {
		return x.Type
	}
	return ""
}

func (x *AddRelationshipRequest) GetAttributes() map[string]string {
	if x != nil {
		return x.Attributes
	}
	return nil
}

type AddRelationshipResponse struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	Message       string                 `protobuf:"bytes,1,opt,name=message,proto3" json:"message,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *AddRelationshipResponse) Reset() {
	*x = AddRelationshipResponse{}
	mi := &file_proto_relationship_proto_msgTypes[3]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *AddRelationshipResponse) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*AddRelationshipResponse) ProtoMessage() {}

func (x *AddRelationshipResponse) ProtoReflect() protoreflect.Message {
	mi := &file_proto_relationship_proto_msgTypes[3]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use AddRelationshipResponse.ProtoReflect.Descriptor instead.
func (*AddRelationshipResponse) Descriptor() ([]byte, []int) {
	return file_proto_relationship_proto_rawDescGZIP(), []int{3}
}

func (x *AddRelationshipResponse) GetMessage() string {
	if x != nil {
		return x.Message
	}
	return ""
}

type QueryRequest struct {
	state            protoimpl.MessageState `protogen:"open.v1"`
	SourceName       string                 `protobuf:"bytes,1,opt,name=source_name,json=sourceName,proto3" json:"source_name,omitempty"`
	TargetName       string                 `protobuf:"bytes,2,opt,name=target_name,json=targetName,proto3" json:"target_name,omitempty"`
	RelationshipType string                 `protobuf:"bytes,3,opt,name=relationship_type,json=relationshipType,proto3" json:"relationship_type,omitempty"`
	unknownFields    protoimpl.UnknownFields
	sizeCache        protoimpl.SizeCache
}

func (x *QueryRequest) Reset() {
	*x = QueryRequest{}
	mi := &file_proto_relationship_proto_msgTypes[4]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *QueryRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*QueryRequest) ProtoMessage() {}

func (x *QueryRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_relationship_proto_msgTypes[4]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use QueryRequest.ProtoReflect.Descriptor instead.
func (*QueryRequest) Descriptor() ([]byte, []int) {
	return file_proto_relationship_proto_rawDescGZIP(), []int{4}
}

func (x *QueryRequest) GetSourceName() string {
	if x != nil {
		return x.SourceName
	}
	return ""
}

func (x *QueryRequest) GetTargetName() string {
	if x != nil {
		return x.TargetName
	}
	return ""
}

func (x *QueryRequest) GetRelationshipType() string {
	if x != nil {
		return x.RelationshipType
	}
	return ""
}

type FindPathRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	SourceName    string                 `protobuf:"bytes,1,opt,name=source_name,json=sourceName,proto3" json:"source_name,omitempty"`
	TargetName    string                 `protobuf:"bytes,2,opt,name=target_name,json=targetName,proto3" json:"target_name,omitempty"`
	MaxDepth      int32                  `protobuf:"varint,3,opt,name=max_depth,json=maxDepth,proto3" json:"max_depth,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *FindPathRequest) Reset() {
	*x = FindPathRequest{}
	mi := &file_proto_relationship_proto_msgTypes[5]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *FindPathRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*FindPathRequest) ProtoMessage() {}

func (x *FindPathRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_relationship_proto_msgTypes[5]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use FindPathRequest.ProtoReflect.Descriptor instead.
func (*FindPathRequest) Descriptor() ([]byte, []int) {
	return file_proto_relationship_proto_rawDescGZIP(), []int{5}
}

func (x *FindPathRequest) GetSourceName() string {
	if x != nil {
		return x.SourceName
	}
	return ""
}

func (x *FindPathRequest) GetTargetName() string {
	if x != nil {
		return x.TargetName
	}
	return ""
}

func (x *FindPathRequest) GetMaxDepth() int32 {
	if x != nil {
		return x.MaxDepth
	}
	return 0
}

type ExploreRequest struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	SourceName    string                 `protobuf:"bytes,1,opt,name=source_name,json=sourceName,proto3" json:"source_name,omitempty"`
	MaxDepth      int32                  `protobuf:"varint,2,opt,name=max_depth,json=maxDepth,proto3" json:"max_depth,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *ExploreRequest) Reset() {
	*x = ExploreRequest{}
	mi := &file_proto_relationship_proto_msgTypes[6]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *ExploreRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*ExploreRequest) ProtoMessage() {}

func (x *ExploreRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_relationship_proto_msgTypes[6]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use ExploreRequest.ProtoReflect.Descriptor instead.
func (*ExploreRequest) Descriptor() ([]byte, []int) {
	return file_proto_relationship_proto_rawDescGZIP(), []int{6}
}

func (x *ExploreRequest) GetSourceName() string {
	if x != nil {
		return x.SourceName
	}
	return ""
}

func (x *ExploreRequest) GetMaxDepth() int32 {
	if x != nil {
		return x.MaxDepth
	}
	return 0
}

type Entity struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	Id            int32                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
	Name          string                 `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
	Type          string                 `protobuf:"bytes,3,opt,name=type,proto3" json:"type,omitempty"`
	Properties    map[string]string      `protobuf:"bytes,4,rep,name=properties,proto3" json:"properties,omitempty" protobuf_key:"bytes,1,opt,name=key" protobuf_val:"bytes,2,opt,name=value"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *Entity) Reset() {
	*x = Entity{}
	mi := &file_proto_relationship_proto_msgTypes[7]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *Entity) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*Entity) ProtoMessage() {}

func (x *Entity) ProtoReflect() protoreflect.Message {
	mi := &file_proto_relationship_proto_msgTypes[7]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use Entity.ProtoReflect.Descriptor instead.
func (*Entity) Descriptor() ([]byte, []int) {
	return file_proto_relationship_proto_rawDescGZIP(), []int{7}
}

func (x *Entity) GetId() int32 {
	if x != nil {
		return x.Id
	}
	return 0
}

func (x *Entity) GetName() string {
	if x != nil {
		return x.Name
	}
	return ""
}

func (x *Entity) GetType() string {
	if x != nil {
		return x.Type
	}
	return ""
}

func (x *Entity) GetProperties() map[string]string {
	if x != nil {
		return x.Properties
	}
	return nil
}

type Relationship struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	Id            int32                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
	SourceId      int32                  `protobuf:"varint,2,opt,name=source_id,json=sourceId,proto3" json:"source_id,omitempty"`
	TargetId      int32                  `protobuf:"varint,3,opt,name=target_id,json=targetId,proto3" json:"target_id,omitempty"`
	Type          string                 `protobuf:"bytes,4,opt,name=type,proto3" json:"type,omitempty"`
	Attributes    map[string]string      `protobuf:"bytes,5,rep,name=attributes,proto3" json:"attributes,omitempty" protobuf_key:"bytes,1,opt,name=key" protobuf_val:"bytes,2,opt,name=value"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *Relationship) Reset() {
	*x = Relationship{}
	mi := &file_proto_relationship_proto_msgTypes[8]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *Relationship) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*Relationship) ProtoMessage() {}

func (x *Relationship) ProtoReflect() protoreflect.Message {
	mi := &file_proto_relationship_proto_msgTypes[8]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use Relationship.ProtoReflect.Descriptor instead.
func (*Relationship) Descriptor() ([]byte, []int) {
	return file_proto_relationship_proto_rawDescGZIP(), []int{8}
}

func (x *Relationship) GetId() int32 {
	if x != nil {
		return x.Id
	}
	return 0
}

func (x *Relationship) GetSourceId() int32 {
	if x != nil {
		return x.SourceId
	}
	return 0
}

func (x *Relationship) GetTargetId() int32 {
	if x != nil {
		return x.TargetId
	}
	return 0
}

func (x *Relationship) GetType() string {
	if x != nil {
		return x.Type
	}
	return ""
}

func (x *Relationship) GetAttributes() map[string]string {
	if x != nil {
		return x.Attributes
	}
	return nil
}

type QueryResponse struct {
	state         protoimpl.MessageState `protogen:"open.v1"`
	Entities      []*Entity              `protobuf:"bytes,1,rep,name=entities,proto3" json:"entities,omitempty"`
	Relationships []*Relationship        `protobuf:"bytes,2,rep,name=relationships,proto3" json:"relationships,omitempty"`
	Summary       string                 `protobuf:"bytes,3,opt,name=summary,proto3" json:"summary,omitempty"`
	unknownFields protoimpl.UnknownFields
	sizeCache     protoimpl.SizeCache
}

func (x *QueryResponse) Reset() {
	*x = QueryResponse{}
	mi := &file_proto_relationship_proto_msgTypes[9]
	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
	ms.StoreMessageInfo(mi)
}

func (x *QueryResponse) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*QueryResponse) ProtoMessage() {}

func (x *QueryResponse) ProtoReflect() protoreflect.Message {
	mi := &file_proto_relationship_proto_msgTypes[9]
	if x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use QueryResponse.ProtoReflect.Descriptor instead.
func (*QueryResponse) Descriptor() ([]byte, []int) {
	return file_proto_relationship_proto_rawDescGZIP(), []int{9}
}

func (x *QueryResponse) GetEntities() []*Entity {
	if x != nil {
		return x.Entities
	}
	return nil
}

func (x *QueryResponse) GetRelationships() []*Relationship {
	if x != nil {
		return x.Relationships
	}
	return nil
}

func (x *QueryResponse) GetSummary() string {
	if x != nil {
		return x.Summary
	}
	return ""
}

var File_proto_relationship_proto protoreflect.FileDescriptor

const file_proto_relationship_proto_rawDesc = "" +
	"\n" +
	"\x18proto/relationship.proto\x12\frelationship\"\xc9\x01\n" +
	"\x10AddEntityRequest\x12\x12\n" +
	"\x04name\x18\x01 \x01(\tR\x04name\x12\x12\n" +
	"\x04type\x18\x02 \x01(\tR\x04type\x12N\n" +
	"\n" +
	"properties\x18\x03 \x03(\v2..relationship.AddEntityRequest.PropertiesEntryR\n" +
	"properties\x1a=\n" +
	"\x0fPropertiesEntry\x12\x10\n" +
	"\x03key\x18\x01 \x01(\tR\x03key\x12\x14\n" +
	"\x05value\x18\x02 \x01(\tR\x05value:\x028\x01\"=\n" +
	"\x11AddEntityResponse\x12\x0e\n" +
	"\x02id\x18\x01 \x01(\x05R\x02id\x12\x18\n" +
	"\amessage\x18\x02 \x01(\tR\amessage\"\x83\x02\n" +
	"\x16AddRelationshipRequest\x12\x1f\n" +
	"\vsource_name\x18\x01 \x01(\tR\n" +
	"sourceName\x12\x1f\n" +
	"\vtarget_name\x18\x02 \x01(\tR\n" +
	"targetName\x12\x12\n" +
	"\x04type\x18\x03 \x01(\tR\x04type\x12T\n" +
	"\n" +
	"attributes\x18\x04 \x03(\v24.relationship.AddRelationshipRequest.AttributesEntryR\n" +
	"attributes\x1a=\n" +
	"\x0fAttributesEntry\x12\x10\n" +
	"\x03key\x18\x01 \x01(\tR\x03key\x12\x14\n" +
	"\x05value\x18\x02 \x01(\tR\x05value:\x028\x01\"3\n" +
	"\x17AddRelationshipResponse\x12\x18\n" +
	"\amessage\x18\x01 \x01(\tR\amessage\"}\n" +
	"\fQueryRequest\x12\x1f\n" +
	"\vsource_name\x18\x01 \x01(\tR\n" +
	"sourceName\x12\x1f\n" +
	"\vtarget_name\x18\x02 \x01(\tR\n" +
	"targetName\x12+\n" +
	"\x11relationship_type\x18\x03 \x01(\tR\x10relationshipType\"p\n" +
	"\x0fFindPathRequest\x12\x1f\n" +
	"\vsource_name\x18\x01 \x01(\tR\n" +
	"sourceName\x12\x1f\n" +
	"\vtarget_name\x18\x02 \x01(\tR\n" +
	"targetName\x12\x1b\n" +
	"\tmax_depth\x18\x03 \x01(\x05R\bmaxDepth\"N\n" +
	"\x0eExploreRequest\x12\x1f\n" +
	"\vsource_name\x18\x01 \x01(\tR\n" +
	"sourceName\x12\x1b\n" +
	"\tmax_depth\x18\x02 \x01(\x05R\bmaxDepth\"\xc5\x01\n" +
	"\x06Entity\x12\x0e\n" +
	"\x02id\x18\x01 \x01(\x05R\x02id\x12\x12\n" +
	"\x04name\x18\x02 \x01(\tR\x04name\x12\x12\n" +
	"\x04type\x18\x03 \x01(\tR\x04type\x12D\n" +
	"\n" +
	"properties\x18\x04 \x03(\v2$.relationship.Entity.PropertiesEntryR\n" +
	"properties\x1a=\n" +
	"\x0fPropertiesEntry\x12\x10\n" +
	"\x03key\x18\x01 \x01(\tR\x03key\x12\x14\n" +
	"\x05value\x18\x02 \x01(\tR\x05value:\x028\x01\"\xf7\x01\n" +
	"\fRelationship\x12\x0e\n" +
	"\x02id\x18\x01 \x01(\x05R\x02id\x12\x1b\n" +
	"\tsource_id\x18\x02 \x01(\x05R\bsourceId\x12\x1b\n" +
	"\ttarget_id\x18\x03 \x01(\x05R\btargetId\x12\x12\n" +
	"\x04type\x18\x04 \x01(\tR\x04type\x12J\n" +
	"\n" +
	"attributes\x18\x05 \x03(\v2*.relationship.Relationship.AttributesEntryR\n" +
	"attributes\x1a=\n" +
	"\x0fAttributesEntry\x12\x10\n" +
	"\x03key\x18\x01 \x01(\tR\x03key\x12\x14\n" +
	"\x05value\x18\x02 \x01(\tR\x05value:\x028\x01\"\x9d\x01\n" +
	"\rQueryResponse\x120\n" +
	"\bentities\x18\x01 \x03(\v2\x14.relationship.EntityR\bentities\x12@\n" +
	"\rrelationships\x18\x02 \x03(\v2\x1a.relationship.RelationshipR\rrelationships\x12\x18\n" +
	"\asummary\x18\x03 \x01(\tR\asummary2\xa0\x03\n" +
	"\x13RelationshipService\x12L\n" +
	"\tAddEntity\x12\x1e.relationship.AddEntityRequest\x1a\x1f.relationship.AddEntityResponse\x12^\n" +
	"\x0fAddRelationship\x12$.relationship.AddRelationshipRequest\x1a%.relationship.AddRelationshipResponse\x12M\n" +
	"\x12QueryRelationships\x12\x1a.relationship.QueryRequest\x1a\x1b.relationship.QueryResponse\x12F\n" +
	"\bFindPath\x12\x1d.relationship.FindPathRequest\x1a\x1b.relationship.QueryResponse\x12D\n" +
	"\aExplore\x12\x1c.relationship.ExploreRequest\x1a\x1b.relationship.QueryResponseB\tZ\a./protob\x06proto3"

var (
	file_proto_relationship_proto_rawDescOnce sync.Once
	file_proto_relationship_proto_rawDescData []byte
)

func file_proto_relationship_proto_rawDescGZIP() []byte {
	file_proto_relationship_proto_rawDescOnce.Do(func() {
		file_proto_relationship_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_proto_relationship_proto_rawDesc), len(file_proto_relationship_proto_rawDesc)))
	})
	return file_proto_relationship_proto_rawDescData
}

var file_proto_relationship_proto_msgTypes = make([]protoimpl.MessageInfo, 14)
var file_proto_relationship_proto_goTypes = []any{
	(*AddEntityRequest)(nil),        // 0: relationship.AddEntityRequest
	(*AddEntityResponse)(nil),       // 1: relationship.AddEntityResponse
	(*AddRelationshipRequest)(nil),  // 2: relationship.AddRelationshipRequest
	(*AddRelationshipResponse)(nil), // 3: relationship.AddRelationshipResponse
	(*QueryRequest)(nil),            // 4: relationship.QueryRequest
	(*FindPathRequest)(nil),         // 5: relationship.FindPathRequest
	(*ExploreRequest)(nil),          // 6: relationship.ExploreRequest
	(*Entity)(nil),                  // 7: relationship.Entity
	(*Relationship)(nil),            // 8: relationship.Relationship
	(*QueryResponse)(nil),           // 9: relationship.QueryResponse
	nil,                             // 10: relationship.AddEntityRequest.PropertiesEntry
	nil,                             // 11: relationship.AddRelationshipRequest.AttributesEntry
	nil,                             // 12: relationship.Entity.PropertiesEntry
	nil,                             // 13: relationship.Relationship.AttributesEntry
}
var file_proto_relationship_proto_depIdxs = []int32{
	10, // 0: relationship.AddEntityRequest.properties:type_name -> relationship.AddEntityRequest.PropertiesEntry
	11, // 1: relationship.AddRelationshipRequest.attributes:type_name -> relationship.AddRelationshipRequest.AttributesEntry
	12, // 2: relationship.Entity.properties:type_name -> relationship.Entity.PropertiesEntry
	13, // 3: relationship.Relationship.attributes:type_name -> relationship.Relationship.AttributesEntry
	7,  // 4: relationship.QueryResponse.entities:type_name -> relationship.Entity
	8,  // 5: relationship.QueryResponse.relationships:type_name -> relationship.Relationship
	0,  // 6: relationship.RelationshipService.AddEntity:input_type -> relationship.AddEntityRequest
	2,  // 7: relationship.RelationshipService.AddRelationship:input_type -> relationship.AddRelationshipRequest
	4,  // 8: relationship.RelationshipService.QueryRelationships:input_type -> relationship.QueryRequest
	5,  // 9: relationship.RelationshipService.FindPath:input_type -> relationship.FindPathRequest
	6,  // 10: relationship.RelationshipService.Explore:input_type -> relationship.ExploreRequest
	1,  // 11: relationship.RelationshipService.AddEntity:output_type -> relationship.AddEntityResponse
	3,  // 12: relationship.RelationshipService.AddRelationship:output_type -> relationship.AddRelationshipResponse
	9,  // 13: relationship.RelationshipService.QueryRelationships:output_type -> relationship.QueryResponse
	9,  // 14: relationship.RelationshipService.FindPath:output_type -> relationship.QueryResponse
	9,  // 15: relationship.RelationshipService.Explore:output_type -> relationship.QueryResponse
	11, // [11:16] is the sub-list for method output_type
	6,  // [6:11] is the sub-list for method input_type
	6,  // [6:6] is the sub-list for extension type_name
	6,  // [6:6] is the sub-list for extension extendee
	0,  // [0:6] is the sub-list for field type_name
}

func init() { file_proto_relationship_proto_init() }
func file_proto_relationship_proto_init() {
	if File_proto_relationship_proto != nil {
		return
	}
	type x struct{}
	out := protoimpl.TypeBuilder{
		File: protoimpl.DescBuilder{
			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
			RawDescriptor: unsafe.Slice(unsafe.StringData(file_proto_relationship_proto_rawDesc), len(file_proto_relationship_proto_rawDesc)),
			NumEnums:      0,
			NumMessages:   14,
			NumExtensions: 0,
			NumServices:   1,
		},
		GoTypes:           file_proto_relationship_proto_goTypes,
		DependencyIndexes: file_proto_relationship_proto_depIdxs,
		MessageInfos:      file_proto_relationship_proto_msgTypes,
	}.Build()
	File_proto_relationship_proto = out.File
	file_proto_relationship_proto_goTypes = nil
	file_proto_relationship_proto_depIdxs = nil
}
